--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
     "gh-pages": "^1.0.0",
+    "hoek": "5",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "node-sass": "^4.5.3",
