--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "7.0.0",
     "babel-preset-react-app": "^3.0.1",
     "babel-runtime": "6.23.0",
+    "bcrypt": "^3.0.6",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-hot-loader": "^1.3.5",
