--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sass-css-modules-example",
+  "name": "sass-css-modules",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {},
